--- a/src/components/pointer/pointer.css
+++ b/src/components/pointer/pointer.css
@@ -4,7 +4,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
 .time-container {
     text-align: center;
@@ -12,6 +11,7 @@
 }
 .text {
     background: #ffffff;
+    border-radius: 9px;
 }
 .dummyText {
     color: #ffffff;
